# FishTracker

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AutoAnalyzer.py  DisplayImageWidget.py  FViewer.py  README.md  UI_handler.py  UI_utils.py  background_subtractor.py  batch_dialog.py  batch_track.py  buffer_test.py  cli.py  collapsible_box.py  conf.json  config.json  debug.py  detection_list.py  detector.py  detector_parameters.json  detector_parameters.py  detector_parameters_view.py  dropdown_delegate.py  echogram_view.py  echogram_view.ui  echogram_widget.py  environment.yml  error_log.txt  file_handler.py  filter_parameters.py  fish_gui.py  fish_list.py  fish_manager.py  fish_tracker.spec  fviewer_test.py  iconsLauncher.py  imageBufferTest.py  image_manipulation.py  info_view.py  (+36 more)
.github/workflows/: pre-commit.yml  zizmor.yml
UI/: FMainContainer.py  FViewer.py  FWelcomeInfo.py  editMainMenu.py  fileMainMenu.py  helpMainMenu.py
configs/: default.yaml  example.default.yaml
experimental_tracker/: README.md  test.py  test_data.npy  track.py  tracker.py
file_handlers/: beamLookUp.py  utils.py
file_handlers/MP4/: mp4_file_info.py
file_handlers/analysis_presets/: default.json
file_handlers/output_templates/: jsonTemplate.json  textTemplate.txt
file_handlers/v3/: v3_file_headers_info.json  v3_file_info.py  v3_frame_headers_info.json  v3_frame_info.py
file_handlers/v4/: v4_file_info.py  v4_frame_info.py
file_handlers/v5/: v5_file_headers_info.json  v5_file_info.py  (+3 more)
otto/: detector.py  echogram.py  echogram_with_bg_sub.py  ossi_tracker.py
(+29 files in other folders)
